--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-barcode": "^1.0.0"
+    "express": "^4.18.2",
+    "quagga": "^0.6.16"
   }
 }
