--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "instascan": "^1.0.0",
+    "mongoose": "^7.2.3",
     "quagga": "^0.6.16"
   }
 }
