--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "MahabubArafat",
   "license": "ISC",
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.1",
     "config": "^3.3.9",
