--- a/client_latest/package.json
+++ b/client_latest/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^19.0.0",
     "next": "15.3.1",
     "axios": "^1.5.0",
-    "@shadcn/ui": "latest",
-    "react-qr-scanner": "^1.0.0-alpha.11"
+    "@shadcn/ui": "latest"
   },
   "devDependencies": {
     "typescript": "^5",
